--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
     text-align: center;
     display: flex;
     align-items: center;
-    font-family: "Cambria Math";
+    font-family: "Cambria Math", sans-serif;
 }
 
 #submit {
